# firebase/functions/src/EndPointUtil.ts
@@ -1,4 +1,5 @@
 import {Request, Response} from "firebase-functions";
+import {toInternalException} from "./api/responces/InternalException";
 
 /**
  * リクエストの種類がGETならbodyを実行する。
@@ -18,9 +19,17 @@ export async function onGET(q: Request, s: Response, body: (req: Request, res: R
  * @param s
  * @param body
  */
-export async function onPOST(q: Request, s: Response, body: (req: Request, res: Response) => Promise<void>) {
+export async function onPOST(q: Request, s: Response, body: (json: { [name: string]: any }, res: Response) => Promise<void>) {
   if (q.method === "POST") {
-    await body(q, s);
+    try {
+      const json: any | null | undefined = JSON.parse(q.body);
+      if (json) {
+        await body(json, s);
+      }
+    } catch (e) {
+      // 握り潰しはしません
+      s.status(400).send(toInternalException("InternalException@InvalidJson", "InvalidJson"));
+    }
   }
 }
 
