# firebase/functions/src/api/models/ReservableEvent.ts
@@ -1,41 +1,42 @@
 import {firestore} from "firebase-admin";
-import {safeAsNumber, safeAsReference, safeAsString} from "../../SafeAs";
-import {Group} from "./Group";
+import {safeAsBoolean, safeAsNumber, safeAsReference, safeAsString, safeAsTimeStamp} from "../../SafeAs";
 import DocumentSnapshot = firestore.DocumentSnapshot;
 import DocumentReference = firestore.DocumentReference;
-import CollectionReference = firestore.CollectionReference;
 import Firestore = firestore.Firestore;
-import {Reservation, reservationFromDocument} from "./Reservation";
+import {Reservation, reservationFromDocument, reservationToCollection, ReserveRequest} from "./Reservation";
 import {UserRecord} from "firebase-admin/lib/auth/user-record";
-import {getTwoFactorKey, isAssignable, TicketType, ticketTypeFromDocument} from "./TicketType";
+import {TicketType, ticketTypeFromDocument} from "./TicketType";
+import {ReferenceCollection} from "../../ReferenceCollection";
+import {errorGCP, headCount, sumAll} from "../../util";
+import {registerTicketsToCollection, Ticket} from "./Ticket";
+import Timestamp = firestore.Timestamp;
 
 export type ReservableEvent = {
   event_id: string;
   display_name: string;
   description?: string;
 
-  date_start: string;
-  date_end?: string;
-  available_at?: string;
+  date_start: Timestamp;
+  date_end?: Timestamp;
 
   capacity?: number;
   taken_capacity: number;
   required_reservation?: ReservableEvent;
 
   reservable_ticket_type: TicketType[];
+  require_two_factor: boolean;
 }
 
 export async function eventFromDoc(doc: DocumentSnapshot): Promise<ReservableEvent | null> {
   if (doc.exists) {
     // Eventが存在する場合
     const event_id = doc.ref.id;
-    const display_name = doc.get("display_name") as string;
+    const display_name = safeAsString(doc.get("display_name"));
     const description = safeAsString(doc.get("description"));
-    const date_start = doc.get("date_start") as string;
-    const date_end = safeAsString(doc.get("date_end"));
-    const available_at = safeAsString(doc.get("available_at"));
+    const date_start = safeAsTimeStamp(doc.get("date_start"));
+    const date_end = safeAsTimeStamp(doc.get("date_end"));
     const capacity = safeAsNumber(doc.get("capacity"));
-    const taken_capacity = doc.get("taken_capacity") as number;
+    const taken_capacity = safeAsNumber(doc.get("taken_capacity"));
     const required_reservation_ref = safeAsReference(doc.get("required_reservation"));
     let required_reservation: ReservableEvent | undefined = undefined;
     if (required_reservation_ref !== undefined) {
@@ -46,8 +47,15 @@ export async function eventFromDoc(doc: DocumentSnapshot): Promise<ReservableEve
         required_reservation = undefined;
       }
     }
-    const ticket_types = (doc.get("ticket_type") as string[]).map(ref => safeAsReference(ref)).filter(ref => ref !== undefined) as DocumentReference[];
+    const ticket_types = (doc.get("ticket_type") as any[]).map(ref => safeAsReference(ref)).filter(ref => ref !== undefined) as DocumentReference[];
     const reservable_ticket_type = (await (Promise.all(ticket_types.map(async ref => ticketTypeFromDocument(await ref.get()))))).filter(type => type !== null) as TicketType[];
+    const require_two_factor = safeAsBoolean(doc.get("require_two_factor"));
+
+    if (display_name === undefined || date_start === undefined || reservable_ticket_type.length === 0 || require_two_factor === undefined || taken_capacity === undefined) {
+      errorGCP("in eventFromDoc, returns null # display_name || date_start || reservable_ticket_type.length === 0 || require_two_factor === undefined || taken_capacity === undefined", "path", doc.ref.path, "display_name",display_name, "date_start", date_start, "reservable_ticket_type.length", reservable_ticket_type.length, "require_two_factor", require_two_factor, "taken_capacity", taken_capacity);
+      return null;
+    }
+
 
     return {
       event_id,
@@ -55,67 +63,78 @@ export async function eventFromDoc(doc: DocumentSnapshot): Promise<ReservableEve
       description,
       date_start,
       date_end,
-      available_at,
       capacity,
       taken_capacity,
       required_reservation,
-      reservable_ticket_type
+      reservable_ticket_type,
+      require_two_factor
     }
   }
 
   return null;
 }
 
+export async function eventByID(collection: ReferenceCollection, event_id: string): Promise<ReservableEvent | null> {
+  return eventFromDoc(await collection.eventsCollection.doc(event_id).get());
+}
+
 /**
  * 実際に予約処理をする(人数の変更だけ)
  * @param db
- * @param reservationsCollection
- * @param eventsCollection
- * @param ticketCollection
+ * @param collection
  * @param user
- * @param event
- * @param group
- * @param ticket_type_id
+ * @param reservationRequest
  */
-export async function reserveEvent(db: Firestore, reservationsCollection: CollectionReference, eventsCollection: CollectionReference,ticketCollection:CollectionReference, user: UserRecord, event: ReservableEvent, group: Group, ticket_type_id: string,two_factor_key:string | undefined): Promise<ReservationStatus> {
-  if (group.headcount < 1) {
+export async function reserveEvent(db: Firestore, collection: ReferenceCollection, user: UserRecord, reservationRequest: ReserveRequest): Promise<ReservationStatus> {
+  if (sumAll(reservationRequest.ticket_types.map(ticket => ticket.reservable_group.headcount)) < 1) {
     // 人数が1人未満の場合は予約できない
     return ReservationStatus.INVALID_GROUP;
   }
 
-  const ticketType = await ticketTypeFromDocument(await ticketCollection.doc(ticket_type_id).get());
-
-  if (ticketType === null) {
-    return ReservationStatus.INVALID_TICKET_TYPE;
-  }
-
-  if (!isAssignable(ticketType, group)) {
-    return ReservationStatus.INVALID_TICKET_TYPE; // 予約できないチケットタイプ
-  }
-
-  const ticket_two_factor_key = await getTwoFactorKey(ticketCollection,ticketType)
-  if(ticket_two_factor_key != undefined){
+  const ticket_two_factor_key = await getTwoFactorKey(collection, reservationRequest.event)
+  if (ticket_two_factor_key != undefined) {
     // 2FAが必要な場合
-    if(ticket_two_factor_key !== two_factor_key){
+    if (ticket_two_factor_key !== reservationRequest.two_factor_key) {
       return ReservationStatus.INVALID_TWO_FACTOR_KEY;
     }
   }
 
   // TODO Check if user is reserved the required event
 
-  // Check if the user is already reserved at same group data
-  let docReference = await reservationsCollection.doc(user.uid).collection("reservations").get()
+  // Check if the user is already reserved the event
+  let docReference = await collection.reservationsCollection.doc(user.uid).collection("reservations").get()
   const reservations = (await Promise.all(docReference.docs.map(async doc => {
     return reservationFromDocument(doc);
   }))).filter(ev => ev !== null) as Reservation[];
-  const reservation = reservations.find(rv => rv.event.event_id === event.event_id);
+  const reservation = reservations.find(rv => rv.event.event_id === reservationRequest.event.event_id);
   if (reservation !== undefined) {
     // Already reserved
     return ReservationStatus.ALREADY_RESERVED;
   }
 
   // Check if the event is available and update the taken_capacity
-  return addTakenCapacity(db, eventsCollection, event, group.headcount);
+  const result = await addTakenCapacity(db, collection, reservationRequest.event, headCount(reservationRequest.ticket_types));
+  if (result === ReservationStatus.RESERVED) {
+    // Register Tickets
+    const reserved_tickets: Ticket[] = await Promise.all(reservationRequest.ticket_types.map(async ticketType => {
+      const ticket_id = await registerTicketsToCollection(collection, ticketType, reservationRequest.event);
+      return {
+        ticket_id: ticket_id,
+        ticket_type: ticketType,
+        event: reservationRequest.event
+      }
+    }));
+
+    // Register Reservation
+    await reservationToCollection({
+      reservation_id: reservationRequest.reservation_id,
+      event: reservationRequest.event,
+      tickets: reserved_tickets,
+    }, user, collection)
+
+    return ReservationStatus.RESERVED;
+  }
+  return result;
 }
 
 export enum ReservationStatus {
@@ -132,14 +151,14 @@ export enum ReservationStatus {
 /**
  * increment the taken_capacity of the event
  * @param db
- * @param eventsCollection
+ * @param collection
  * @param event
  * @param toAdd
  */
-export async function addTakenCapacity(db: Firestore, eventsCollection: CollectionReference, event: ReservableEvent, toAdd: number): Promise<ReservationStatus> {
+export async function addTakenCapacity(db: Firestore, collection: ReferenceCollection, event: ReservableEvent, toAdd: number): Promise<ReservationStatus> {
   try {
     return await db.runTransaction(async (t) => {
-      const ref = eventsCollection.doc(event.event_id);
+      const ref = collection.eventsCollection.doc(event.event_id);
       const data = await ref.get();
       const new_taken_capacity = Math.max(data.get("taken_capacity") as number + toAdd, 0); // TODO should be error when the value is less than 0
       const capacity: number | undefined = safeAsNumber(data.get("capacity"));
@@ -172,4 +191,17 @@ export async function addTakenCapacity(db: Firestore, eventsCollection: Collecti
     // トランザクション失敗
     return ReservationStatus.TRANSACTION_FAILED;
   }
+}
+
+export async function getTwoFactorKey(collection: ReferenceCollection, event: ReservableEvent): Promise<string | null> {
+  return getTwoFactorKeyByRef(collection.eventsCollection.doc(event.event_id));
+}
+
+export async function getTwoFactorKeyByRef(event_ref: DocumentReference): Promise<string | null> {
+  const data = await event_ref.get();
+  const two_factor_key = safeAsString(data.get("two_factor_key"));
+  if (two_factor_key === undefined) {
+    return null;
+  }
+  return two_factor_key;
 }
